--- a/client/src/Components/Featured/Featured.css
+++ b/client/src/Components/Featured/Featured.css
@@ -1,34 +1,30 @@
 .featured {
-  flex-basis: 100%;
+  flex-basis: 99%;
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
   gap: 1rem;
-  border: 1px solid var(--shadow);
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 1rem;
+  box-shadow: 1px 1px 3px var(--shadow);
 }
 
 @media screen and (max-width: 960px) {
   .featured {
     border-radius: 0;
+    flex-basis: 100%;
   }
 }
 
 .featured-label {
-  position: absolute;
-  left: 1.5rem;
-  top: -1rem;
-
+  margin: 0 auto;
   font-size: 1.5rem;
-  font-weight: 300;
+  font-weight: 500;
   color: var(--primary);
 
-  padding: 0 0.5rem;
-
-  background-color: var(--secondary);
+  padding: 1rem 0 2rem 0;
 }
 
 .no-available-articles {
