--- a/client/src/Components/Sidebar/Sidebar.css
+++ b/client/src/Components/Sidebar/Sidebar.css
@@ -10,7 +10,8 @@
   padding: 1rem;
   z-index: 10;
 
-  border-right: 1px solid var(--primary-2);
+  /* border-right: 1px solid var(--primary-2); */
+  box-shadow: 1px 1px 3px var(--shadow);
 
   display: flex;
   flex-direction: column;
