--- a/client/src/Pages/Profile/Profile.css
+++ b/client/src/Pages/Profile/Profile.css
@@ -7,12 +7,13 @@
 
 .profile-data-container {
   flex-basis: 30%;
-  border: 1px solid var(--shadow);
-  border-radius: 10px;
   padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px var(--shadow);
 }
 
 .profile-user-name-label,
@@ -34,5 +35,6 @@
     border: none;
     flex-basis: 100%;
     flex-shrink: 1;
+    box-shadow: none;
   }
 }
