--- a/client/src/Pages/_Layout/NavBar/NavBar.css
+++ b/client/src/Pages/_Layout/NavBar/NavBar.css
@@ -75,12 +75,14 @@
   text-decoration: none;
   padding: 0.5rem 1rem;
   border: none;
-  border-bottom: 2px solid transparent;
+  border-bottom: 4px solid transparent;
 }
 
 .activated,
 .nav-link:hover {
-  border-bottom: 2px solid var(--primary);
+  height: 100%;
+  border-bottom: 4px solid var(--primary);
+  background-color: var(--primary-transparent);
   cursor: pointer;
 }
 
@@ -175,12 +177,6 @@
     transform: translate(-100%, 60%);
     font-size: 1.8rem;
     cursor: pointer;
-  }
-  .centered-label {
-    border-bottom: 2px solid transparent;
-  }
-  .centered-label:hover {
-    border-color: var(--primary);
   }
   .nav-item:last-child > .nav-link {
     box-shadow: 1px 2px 2px var(--shadow);
