--- a/client/src/Pages/_Layout/NavBar/NavBar.css
+++ b/client/src/Pages/_Layout/NavBar/NavBar.css
@@ -99,22 +99,6 @@
 .mobile-icon {
   display: none;
 }
-.counter-container {
-  position: absolute;
-  right: 0;
-  top: 1.3rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--danger);
-  width: 1rem;
-  height: 1rem;
-  border-radius: 50%;
-}
-.counter {
-  color: var(--secondary);
-  font-size: 0.8rem;
-}
 
 @media screen and (max-width: 960px) {
   /* .NavbarItems {
@@ -177,6 +161,7 @@
 
   .nav-item {
     width: 100%;
+    height: auto;
   }
 
   .navbar-logo {
