--- a/client/src/Components/TableOfContents/TableOfContents.css
+++ b/client/src/Components/TableOfContents/TableOfContents.css
@@ -3,11 +3,12 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: 30%;
 }
 
 .table-of-contents-link {
   text-decoration: none;
-  white-space: nowrap;
+  /* white-space: nowrap; */
   color: var(--primary);
   padding: 0.2rem;
   border-radius: 5px;
