style: Choose global separator

--- a/client/src/GlobalStyle/Index.css
+++ b/client/src/GlobalStyle/Index.css
@@ -4,6 +4,7 @@
   --primary-light: #e8ecf1;
   --primary-disabled: #002147bd;
   --primary-transparent: #00214711;
+  --primary-light: #ccc;
   --secondary: #fbfbff;
   --danger: red;
   --warning: #ffa500;
