--- a/client/src/Components/Featured/Components/ArticleCard/ArticleCard.css
+++ b/client/src/Components/Featured/Components/ArticleCard/ArticleCard.css
@@ -1,8 +1,7 @@
 .article-card {
   width: 100%;
   border-radius: 10px;
-  box-shadow: 1px 1px 3px var(--shadow);
-  border: 1px solid transparent;
+  border: 1px solid var(--primary-light);
   padding: 1rem;
   text-decoration: none;
 }
