--- a/client/src/Components/Sidebar/Sidebar.css
+++ b/client/src/Components/Sidebar/Sidebar.css
@@ -11,7 +11,7 @@
   z-index: 10;
 
   /* border-right: 1px solid var(--primary-2); */
-  box-shadow: 1px 1px 3px var(--shadow);
+  /* box-shadow: 1px 1px 3px var(--shadow); */
 
   display: flex;
   flex-direction: column;
