--- a/client/src/GlobalStyle/Component.css
+++ b/client/src/GlobalStyle/Component.css
@@ -98,8 +98,9 @@
   gap: 1rem;
   padding: 2rem 3rem;
 
-  border-radius: 5px;
-  box-shadow: 3px 3px 10px 1px var(--shadow);
+  border-radius: 10px;
+  border: 1px solid var(--primary-light);
+  background-color: var(--secondary);
 }
 
 .card > *:first-child,
