--- a/client/src/GlobalStyle/Layout.css
+++ b/client/src/GlobalStyle/Layout.css
@@ -18,6 +18,8 @@
   margin-right: auto;
   margin-left: auto;
   overflow: scroll;
+
+  background-color: var(--secondary);
 }
 
 @media screen and (max-width: 960px) {
