--- a/client/src/Pages/_Layout/NavBar/NavBar.css
+++ b/client/src/Pages/_Layout/NavBar/NavBar.css
@@ -8,7 +8,7 @@
   position: sticky;
   top: 0;
   z-index: 999;
-  box-shadow: 1px 1px 3px var(--shadow);
+  border-bottom: 1px solid var(--primary-transparent);
 }
 
 .navbar-container {
