--- a/client/src/Components/Featured/Components/ArticleCard/ArticleCard.css
+++ b/client/src/Components/Featured/Components/ArticleCard/ArticleCard.css
@@ -13,6 +13,7 @@
 .article-card-title {
   color: var(--primary);
   font-weight: 400;
+  font-size: 2rem;
   padding-bottom: 0.5rem;
 }
 .article-card-description {
