--- a/client/src/Components/Featured/Featured.css
+++ b/client/src/Components/Featured/Featured.css
@@ -18,12 +18,10 @@
 }
 
 .featured-label {
-  margin: 0 auto;
-  font-size: 1.5rem;
-  font-weight: 500;
+  font-size: 2rem;
+  font-weight: 300;
+  letter-spacing: -0.05rem;
   color: var(--primary);
-
-  padding: 1rem 0 2rem 0;
 }
 
 .no-available-articles {
