--- a/client/src/Pages/Home/Home.css
+++ b/client/src/Pages/Home/Home.css
@@ -9,6 +9,8 @@
 .hero-animation {
   margin: 15vh 0;
   flex-basis: 30%;
+  display: flex;
+  justify-content: center;
 }
 .hero-content {
   margin: 15vh 0;
@@ -20,6 +22,9 @@
   color: var(--primary);
   font-size: 2.5rem;
   font-weight: 400;
+  line-height: 1.2;
+  letter-spacing: -0.05rem;
+  text-align: center;
 }
 .landing-p {
   margin-top: 1vh;
@@ -27,6 +32,7 @@
   color: var(--primary);
   font-size: 1.25rem;
   font-weight: 300;
+  text-align: center;
 }
 
 .landing-cta {
