--- a/client/src/Pages/Profile/Profile.css
+++ b/client/src/Pages/Profile/Profile.css
@@ -17,9 +17,12 @@
 
 .profile-user-name-label,
 .profile-data-label {
-  text-align: center;
   color: var(--primary);
-  font-weight: 500;
+  font-weight: 400;
+  text-align: center;
+}
+.profile-data-label {
+  padding-left: 0.5rem;
 }
 .profile-data-label {
   padding-top: 1rem;
